# todo-app

./: .env.example  App.js  FRONTEND_README.md  README.md  app.json  eas.json  jest.config.js  jest.setup.js  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  frontend-ci.yml
backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt
backend/.github/workflows/: backend-ci.yml  backend-lint-test.yml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  auth.py  crud.py  db.py  main.py  models.py  schemas.py
backend/app/routes/: __init__.py  auth.py  chat.py  chat_ws_manager.py  media.py  todos.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_crud_direct.py  test_todos.py
docs/: DEPLOY.md  PUSH_COMMANDS.md  SDLC.md  SPLIT_REPOS.md
scripts/: run-local.sh
src/api/: auth.js  config.js  todos.js
src/components/: ButtonPrimary.js  InputField.js  TodoItem.js
src/components/__tests__/: ButtonPrimary.test.js  InputField.test.js
src/context/: AuthContext.js
src/navigation/: AppNavigator.js  AuthNavigator.js
src/screens/: ChatList.js  ChatScreen.js  DashboardScreen.js  LoginScreen.js  NewChat.js  ProfileScreen.js  SignupScreen.js
src/theme/: README.md  colors.js  spacing.js  typography.js
